fix: Sidebar animation on mobile.
Fixed Sidebar animation on mobile and added backdrop blur and closing on click

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,13 @@
-#anchorDiv {
-  transition: all 2s;
+.color-primary,
+#navbar-datepicker {
+  color: #39578a !important;
+}
+
+#navbar-datepicker {
+  border-color: #39578a;
+}
+
+#profileSidebar,
+#formSidebar {
+  border: 2px solid #39578a;
 }
